--- a/templates/tpl_base.html
+++ b/templates/tpl_base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>{% block title %}{{ title }}{% endblock %}</title>
+    <title>{% block title %}{{ portail.title }}{% endblock %}</title>
     {% block head %}{% endblock %}
   </head>
   <body>
