--- a/templates/tpl_portail.html
+++ b/templates/tpl_portail.html
@@ -2,6 +2,7 @@
 
 {% block content %}
   <h1>{{portail.title}}</h1>
+  <h3>Liste des applications</h3>
   {% for app in applications %}
     <li><a href="/app/{{app.appid}}" title="{{ app.title|e }}">{{ app.title|e }}</a></li>
   {% endfor %}
