--- a/templates/tpl_base.html
+++ b/templates/tpl_base.html
@@ -1,19 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>{% block title %}{{ portail.title }}{% endblock %}</title>
-    {% block head %}{% endblock %}
-  </head>
-  <body>
-    <div id="content">
-      {% block content %}<p>Placeholder content</p>{% endblock %}
-    </div>
-    {% block foot %}
-    <hr/>
-    <h6>
-        <a href="{{env!("CARGO_PKG_HOMEPAGE")}}" target="_blank">{{env!("CARGO_PKG_NAME")|upper}}</a>
-        {{env!("CARGO_PKG_VERSION")}} &copy; {{env!("CARGO_PKG_AUTHORS")}}
-    </h6>
-    {% endblock %}
-  </body>
+
+<head>
+  <title>{% block title %}{{ portail.title }}{% endblock %}</title>
+  {% block head %}{% endblock %}
+</head>
+
+<body>
+  <table style="width:100%; height:100%">
+    <thead>
+      <tr style="background-color: aliceblue">
+        <th colspan="3" style="padding: 1em;">
+          {% block icone %}<span style="float: left;">[ICO]</span>{% endblock %}
+          {% block navigation %}<span style="float: left;">[ <- nav ]</span>{% endblock %}
+              {% block title %}<span>&nbsp;<b>{{ portail.title }}</b></span>{% endblock %}
+              {% block boutons %}<span style="float: right;">[boutons]</span>{% endblock %}
+        </th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td style="vertical-align: top; background-color: aliceblue; width:10em; padding: 1em;"">
+          <div id=" menu">
+          <h6><a href="/">Accueil</a></h6>
+          {% block menu %}{% endblock %}
+          </div>
+        </td>
+        <td style="vertical-align: top; padding: 1em;">
+          <div id="content">
+            {% block content %}<p>Placeholder content</p>{% endblock %}
+          </div>
+        </td>
+        <td style="vertical-align: top; background-color: aliceblue; width:10em; padding: 1em;">
+          <div style="" id="actions">
+            <h6>Actions</h6>
+            {% block actions %}{% endblock %}
+          </div>
+      </tr>
+    </tbody>
+    <tfoot>
+      <tr>
+        <th colspan="3" style="text-align: left; padding: 1em;">
+          {% block foot %}
+          <h6>
+            <a href='{{env!("CARGO_PKG_HOMEPAGE")}}' title='Page Home'>{{env!("CARGO_PKG_NAME")|upper}}</a>
+            {{env!("CARGO_PKG_VERSION")}} &copy; {{env!("CARGO_PKG_AUTHORS")}}
+          </h6>
+          {% endblock %}
+        </th>
+      </tr>
+    </tfoot>
+  </table>
+</body>
+
 </html>
