--- a/templates/tpl_base.html
+++ b/templates/tpl_base.html
@@ -12,7 +12,7 @@
       <tr style="background-color: aliceblue">
         <th colspan="3" style="padding: 1em;">
           {% block icone %}<span style="float: left;">[ICO]</span>{% endblock %}
-          {% block navigation %}<span style="float: left;">[ <- nav ]</span>{% endblock %}
+          {% block navigation %}{% endblock %}
               {% block title %}<span>&nbsp;<b>{{ portail.title }}</b></span>{% endblock %}
               {% block boutons %}<span style="float: right;">[boutons]</span>{% endblock %}
         </th>
