--- a/templates/tpl_application.html
+++ b/templates/tpl_application.html
@@ -1,9 +1,9 @@
-{% extends "tpl_base.html" %}
+{%- extends "tpl_base.html" -%}
 
-{% block title %}<span>&nbsp;<b>{{ application.title }}</b></span>{% endblock %}
+{%- block title -%}<span>&nbsp;<b>{{ application.title }}</b></span>{%- endblock -%}
 
-{% block menu %}
-{% for tv in application.menu %}
+{%- block menu -%}
+{%- for tv in application.menu -%}
 <li><a href="/list/{{application.appid}}/{{tv.tableid}}/{{tv.viewid}}">{{application.tables[tv.tableid].views[tv.viewid].title}}</a></li>
-{% endfor %}
-{% endblock %}
+{%- endfor -%}
+{%- endblock -%}
