--- a/templates/tpl_view.html
+++ b/templates/tpl_view.html
@@ -1,36 +1,36 @@
-{% extends "tpl_base.html" %}
+{%- extends "tpl_base.html" -%}
 
-{% block title %}
+{%- block title -%}
 <span>&nbsp;<b>{{ application.title }}</b></span>
-{% endblock %}
+{%- endblock -%}
 
-{% block menu %}
-{% for tv in application.menu %}
+{%- block menu -%}
+{%- for tv in application.menu -%}
 <li><a
     href="/list/{{application.appid}}/{{tv.tableid}}/{{tv.viewid}}">{{application.tables[tv.tableid].views[tv.viewid].title}}</a>
 </li>
-{% endfor %}
-{% endblock %}
+{%- endfor -%}
+{%- endblock -%}
 
-{% block navigation %}
+{%- block navigation -%}
 <span style="float: left;"><a href="/list/{{application.appid}}/{{tableid}}/{{viewid}}">[ <- ]</a></span>
-{% endblock %}
+{%- endblock -%}
 
-{% block content %}
-{% set vv = application.tables[tableid].views[viewid] %}
+{%- block content -%}
+{%- set vv = application.tables[tableid].views[viewid] -%}
 <h1>{{vv.title}}</h1>
 <table>
   <tr>
     <td>
       <table>
-      {% for el in vv.velements %}
+      {%- for el in vv.velements -%}
       <tr>
         <td>{{el.elid}}</td>
         <td>{{record[el.elid].value}}</td>
       </tr>
-      {% endfor %}
+      {%- endfor -%}
     </table>
     </td>
   </tr>
 </table>
-{% endblock %}
+{%- endblock -%}
