--- a/templates/tpl_application.html
+++ b/templates/tpl_application.html
@@ -4,6 +4,6 @@
 
 {%- block menu -%}
 {%- for tv in application.menu -%}
-<li><a href="/list/{{application.appid}}/{{tv.tableid}}/{{tv.viewid}}">{{application.tables[tv.tableid].views[tv.viewid].title}}</a></li>
+<li><a href="/list/{{appid}}/{{tv.tableid}}/{{tv.viewid}}">{{application.tables[tv.tableid].views[tv.viewid].title}}</a></li>
 {%- endfor -%}
 {%- endblock -%}
