--- a/templates/tpl_list.html
+++ b/templates/tpl_list.html
@@ -1,4 +1,5 @@
 {%- extends "tpl_base.html" -%}
+{% import "tpl_list_elements.html" as macros %}
 
 {%- block title -%}
 <span>&nbsp;<b>{{ application.title }}</b></span>
@@ -7,31 +8,29 @@
 {%- block menu -%}
 {%- for tv in application.menu -%}
 <li><a
-    href="/list/{{application.appid}}/{{tv.tableid}}/{{tv.viewid}}">{{application.tables[tv.tableid].views[tv.viewid].title}}</a>
+    href="/list/{{appid}}/{{tv.tableid}}/{{tv.viewid}}">{{application.tables[tv.tableid].views[tv.viewid].title}}</a>
 </li>
 {%- endfor -%}
 {%- endblock -%}
 
 {%- block content -%}
-{%- set vv = application.tables[tableid].views[viewid] -%}
-{%- set key = application.tables[tableid].setting.key -%}
-<h1>{{vv.title}}</h1>
+<h1>{{view.title}}</h1>
 <table>
   <tr>
-    {%- for el in vv.velements -%}
+    {%- for el in view.velements -%}
+    {%- if view.form_view or view.form_edit -%}<th></th>{%- endif -%}
     <th>{{el.label_short}}</th>
     {%- endfor -%}
   </tr>
   {%- for record in records %}
   <tr>
-    {%- for vel in vv.velements -%}
-    {%- set el = record[vel.elid] -%}
-      {%- if el.elid == key -%}
-      <td{% if el.style != '' %} style="{{ el.style }}"{% endif %}{% if el.class != '' %} class="{{ el.class }}"{% endif %}>
-      <a href="/view/{{application.appid}}/{{tableid}}/{{viewid}}/{{record[el.elid].value | safe}}">{{el.class}}:{{record[el.elid].value}}</a></td>
-      {%- else -%}
-      {{ macros::el_td(el=record[el.elid])}}
-      {%- endif -%}
+    {%- if view.form_view -%}
+    <td><a href="/view/{{appid}}/{{tableid}}/{{viewid}}/{{view.form_view}}/{{record[application.tables[tableid].setting.key].key_value}}" title="Visualier">[V]</a></td>
+    {%- elif view.form_edit -%}
+    <td><a href="/edit/{{appid}}/{{tableid}}/{{viewid}}/{{view.form_edit}}/{{record[application.tables[tableid].setting.key].key_value}}" title="Éditer">[E]</a></td>
+    {%- endif -%}
+    {%- for vel in view.velements -%}
+      {{ macros::list_elements(el=record[vel.elid]) }}
     {%- endfor -%}
   </tr>
   {%- endfor -%}
