--- a/templates/tpl_view.html
+++ b/templates/tpl_view.html
@@ -1,5 +1,5 @@
 {%- extends "tpl_base.html" -%}
-
+{% import "tpl_view_elements.html" as macros %}
 {%- block title -%}
 <span>&nbsp;<b>{{ application.title }}</b></span>
 {%- endblock -%}
@@ -7,26 +7,24 @@
 {%- block menu -%}
 {%- for tv in application.menu -%}
 <li><a
-    href="/list/{{application.appid}}/{{tv.tableid}}/{{tv.viewid}}">{{application.tables[tv.tableid].views[tv.viewid].title}}</a>
+    href="/list/{{appid}}/{{tv.tableid}}/{{tv.viewid}}">{{application.tables[tv.tableid].views[tv.viewid].title}}</a>
 </li>
 {%- endfor -%}
 {%- endblock -%}
 
 {%- block navigation -%}
-<span style="float: left;"><a href="/list/{{application.appid}}/{{tableid}}/{{viewid}}">[ <- ]</a></span>
+<span style="float: left;"><a href="/list/{{appid}}/{{tableid}}/{{viewid}}">[ <- ]</a></span>
 {%- endblock -%}
 
 {%- block content -%}
-{%- set vv = application.tables[tableid].views[viewid] -%}
-<h1>{{vv.title}}</h1>
+<h1>{{form.title}}</h1>
 <table>
   <tr>
     <td>
       <table>
-      {%- for el in vv.velements -%}
+      {%- for vel in form.velements -%}
       <tr>
-        <td>{{el.elid}}</td>
-        <td>{{record[el.elid].value}}</td>
+        {{ macros::view_elements(el=record[vel.elid]) }}
       </tr>
       {%- endfor -%}
     </table>
