--- a/templates/tpl_base.html
+++ b/templates/tpl_base.html
@@ -10,10 +10,10 @@
     <thead>
       <tr style="background-color: aliceblue">
         <th colspan="3" style="padding: 1em;">
-          {%- block icone -%}<span style="float: left;">[ICO]</span>{%- endblock -%}
+          {%- block icone -%}<span style="float: left;"><a href="/" title="Affichage du menu sur Smartphone"><button>ICONE</button></a></span>{%- endblock -%}
           {%- block navigation -%}{%- endblock -%}
           {%- block title -%}<span>&nbsp;<b>{{ portail.title }}</b></span>{%- endblock -%}
-          {%- block boutons -%}<span style="float: right;">[boutons]</span>{%- endblock -%}
+          {%- block boutons -%}<span style="float: right;"></span>{%- endblock -%}
         </th>
       </tr>
     </thead>
