--- a/templates/tpl_list_elements.html
+++ b/templates/tpl_list_elements.html
@@ -5,10 +5,12 @@
 <td {% if el.style %}style="{{ el.style }}"{% else %}style="text-align: center;"{% endif %}
 {% if el.class %} class="{{ el.class }}"{% endif %}>{{el.value}}</td>
 {%- elif el.type_element == "checkbox" -%}
-<td style="text-align: center;">[{{el.value}}]</td>
+<td {% if el.style %}style="{{ el.style }}"{% else %}style="text-align: center;"{% endif %}{% if el.class %} class="{{ el.class }}"{% endif %}>
+<input type="checkbox" {% if el.value == "1" %}checked{% endif %} disabled></input>
+</td>
 {%- elif el.type_element == "tag" -%}
 <td {% if el.style %}style="{{ el.style }}"{% endif %}{% if el.class %} class="{{ el.class }}"{% endif %}>
-    {%- for item in el.value | split(pat=",") -%}[{{item}}]&nbsp;{%- endfor -%}
+    {%- for item in el.value | split(pat=",") -%}<span style="background-color: lightgrey; padding: 0.2em 0.1em">{{item}}</span>&nbsp;{%- endfor -%}
 </td>
 {%- else -%}
 <td {% if el.style %}style="{{ el.style }}"{% endif %}{% if el.class %} class="{{ el.class }}"{% endif %}>{{el.value}}</td>
