--- a/templates/tpl_add.html
+++ b/templates/tpl_add.html
@@ -6,25 +6,25 @@
 
 {%- block menu -%}
 {%- for tv in application.menu -%}
-<li><a href="/view/{{appid}}/{{tv.tableid}}/{{tv.viewid}}">{{application.tables[tv.tableid].views[tv.viewid].title}}</a>
+<li><a href="/list/{{appid}}/{{tv.tableid}}/{{tv.viewid}}">{{application.tables[tv.tableid].views[tv.viewid].title}}</a>
 </li>
 {%- endfor -%}
 {%- endblock -%}
 
 {%- block navigation -%}
-<span style="float: left; margin-left: 1em;"><a href="/view/{{appid}}/{{tableid}}/{{viewid}}"><button><- retour
+<span style="float: left; margin-left: 1em;"><a href="/list/{{appid}}/{{tableid}}/{{viewid}}"><button><- retour
         <b>{{view.title}}</b> </button></a></span>
 {%- endblock -%}
 
 {%- block boutons -%}
 <span style="float: right;">
-  <button onclick="document.getElementById('myform').submit();">Enregistrer</button></a>
+  <button onclick="document.getElementById('myform').submit();">Ajouter</button></a>
 </span>
 {%- endblock -%}
 
 {%- block content -%}
 <h1>{{form.title}}</h1>
-<form id="myform" action="/update/{{appid}}/{{tableid}}/{{viewid}}/{{formid}}/{{id}}" method="post">
+<form id="myform" action="/insert/{{appid}}/{{tableid}}/{{viewid}}/{{formid}}" method="post">
   <table>
     <tr>
       <td>
