--- a/templates/tpl_view.html
+++ b/templates/tpl_view.html
@@ -1,44 +1,53 @@
 {%- extends "tpl_base.html" -%}
 {% import "tpl_view_elements.html" as macros %}
+
 {%- block title -%}
-<span><b>{{ application.title }}</b></span>
+<span>&nbsp;<b>{{ application.title }}</b></span>
 {%- endblock -%}
 
 {%- block menu -%}
 {%- for tv in application.menu -%}
-<li><a href="/list/{{appid}}/{{tv.tableid}}/{{tv.viewid}}">{{application.tables[tv.tableid].views[tv.viewid].title}}</a>
+<li><a
+    href="/view/{{appid}}/{{tv.tableid}}/{{tv.viewid}}">{{application.tables[tv.tableid].views[tv.viewid].title}}</a>
 </li>
 {%- endfor -%}
 {%- endblock -%}
-
-{%- block navigation -%}
-<span style="float: left; margin-left: 1em;">
-  <a href="/list/{{appid}}/{{tableid}}/{{viewid}}">
-    <button><- retour <b>{{view.title}}</button></b></button>
-  </a></span>
-{%- endblock -%}
-
 {%- block boutons -%}
 <span style="float: right;">
-  {%- if view.form_edit -%}<a href="/edit/{{appid}}/{{tableid}}/{{viewid}}/{{view.form_edit}}/{{id}}" title="Modifier">
-    <button>Modifier</button></a>
+  {%- if view.form_add -%}<a href="/add/{{appid}}/{{tableid}}/{{viewid}}/{{view.form_add}}" title="Ajouter">
+    <button>+</button></a>
   {%- endif -%}
 </span>
 {%- endblock -%}
-
 {%- block content -%}
-<h1>{{form.title}}</h1>
+<h1>{{view.title}}</h1>
 <table>
   <tr>
-    <td>
-      <table>
-        {%- for vel in form.velements -%}
-        <tr>
-          {{ macros::view_elements(el=record[vel.elid]) }}
-        </tr>
-        {%- endfor -%}
-      </table>
-    </td>
+    {%- if view.form_view or view.form_edit -%}<th></th>{%- endif -%}
+    {%- for el in view.velements -%}
+    <th>{{el.label_short}}</th>
+    {%- endfor -%}
   </tr>
+  {%- for record in records %}
+  <tr>
+    {%- if view.form_view -%}
+    <td><a href="/form/{{appid}}/{{tableid}}/{{viewid}}/{{view.form_view}}/{{record[application.tables[tableid].setting.key].key_value}}" title="Visualier...">
+      <button>V</button></a>
+    </td>
+    {%- elif view.form_edit -%}
+    <td><a href="/edit/{{appid}}/{{tableid}}/{{viewid}}/{{view.form_edit}}/{{record[application.tables[tableid].setting.key].key_value}}" title="Modifier...">
+      <button>M</button></a>
+    </td>
+    {%- endif -%}
+    {%- for vel in view.velements -%}
+      {{ macros::view_elements(el=record[vel.elid]) }}
+    {%- endfor -%}
+  </tr>
+  {%- endfor -%}
 </table>
+{%- endblock -%}
+{%- block actions -%}
+{%- for action in application.tables[tableid].views[viewid].actions -%}
+<li><a href="/actionv/{{appid}}/{{tableid}}/{{viewid}}/{{loop.index0}}">{{ action.label }}</a></li>
+{%- endfor -%}
 {%- endblock -%}
