--- a/templates/tpl_table_elements.html
+++ b/templates/tpl_table_elements.html
@@ -1,6 +1,6 @@
 
 {# Affichage d'une cellule avec la value de l'élémnt correspondant #}
-{%- macro view_elements(el) -%}
+{%- macro table_elements(el) -%}
 {%- if el.type_element == "number" -%}
 <td class="ui aligned" {% if el.style %}style="{{ el.style }}"{% else %}style="text-align: center;"{% endif %}
 {% if el.class %} class="{{ el.class }}"{% endif %}>{{el.value}}</td>
@@ -15,5 +15,5 @@
 {%- else -%}
 <td class="ui aligned" {% if el.style %}style="{{ el.style }}"{% endif %}{% if el.class %} class="{{ el.class }}"{% endif %}>{{el.value}}</td>
 {%- endif -%}
-{%- endmacro view_elements -%}
+{%- endmacro table_elements -%}
 
