--- a/templates/tpl_view.html
+++ b/templates/tpl_view.html
@@ -1,22 +1,38 @@
 {%- extends "tpl_base.html" -%}
+{% import "tpl_table_elements.html" as macros %}
 
-{%- block title -%}<div class="header item">{{ application.title }}</div>{%- endblock -%}
+{%- block title -%}<div class="header item">{{ view.title }}</div>{%- endblock -%}
 
 {%- block menu -%}{% include "tpl_menu.html" %}{%- endblock -%}
 
 {%- block boutons -%}
-{%- if application.tables[tableid].views[viewid].form_add -%}
-<a class="ui icon item crud-jquery-url" data-url="/add/{{appid}}/{{tableid}}/{{viewid}}/{{view.form_add}}">
-  <i class="plus blue icon"></i>Ajouter un élément...
-</a>
-{%- endif -%}
 {%- endblock -%}
 
 {%- block actions -%}
-{%- if application.tables[tableid].views[viewid].actions -%}
+{%- if application.tables[tableid].views[viewid].actions or application.tables[tableid].views[viewid].form_add -%}
+{%- if not view.filters -%}
+<div class="ui icon item crud-search-div">
+  <!-- Recherche -->
+  <i class="search link icon crud-search-active" title="Rechercher..."></i>
+  <div style="display: none; white-space: nowrap;" class="crud-search">
+    <div class="ui icon input">
+      <input class="crud-search-input-1" type="hidden" value="">
+      <input type="text" class="crud-search-input" data-url="/search/{{appid}}/{{tableid}}/{{viewid}}"
+        value="{{search}}" placeholder="Recherche...">
+      <i class="circular search link icon crud-search-go" title="Rechercher"></i>
+    </div>
+    <i class="close link icon crud-search-close" title="Fermer la recherche"></i>
+  </div>
+</div>
+{%- endif -%}
 <div class="ui dropdown item">
   <i class="ellipsis vertical icon"></i>
   <div class="menu">
+    {%- if application.tables[tableid].views[viewid].form_add -%}
+    <a class="ui icon item crud-jquery-url" data-url="/add/{{appid}}/{{tableid}}/{{viewid}}/{{view.form_add}}">
+      <i class="plus blue icon"></i>Ajouter un élément...
+    </a>
+    {%- endif -%}
     {%- for action in application.tables[tableid].views[viewid].actions -%}
     <a class="item crud-jquery-action" data-confirm="{{action.with_confirm}}"
       data-url="/actionv/{{appid}}/{{tableid}}/{{viewid}}/{{loop.index}}">{{action.label}}</a>
@@ -27,12 +43,12 @@
 {%- endblock -%}
 
 {%- block content -%}
-<div class="ui container"{%- if in_footer -%} style="margin-bottom: 6em;height: 100%"{%- endif -%}>
+<div class="ui container" {%- if in_footer -%} style="margin-bottom: 6em;height: 100%" {%- endif -%}>
   {% include "tpl_flash.html" %}
   {%- if application.tables[tableid].views[viewid].type_view == "table" -%}
   {% include "tpl_table.html" %}
   {%- elif application.tables[tableid].views[viewid].type_view == "card" -%}
-  {% include "tpl_card.html" %}
+  {% include "tpl_table.html" %}
   {%- endif -%}
 </div>
 <input type="hidden" id="crud_view" value="{{appid}}-{{tableid}}-{{viewid}}">
