--- a/templates/tpl_view.html
+++ b/templates/tpl_view.html
@@ -43,7 +43,7 @@
 {%- endblock -%}
 
 {%- block content -%}
-<div class="ui container" {%- if in_footer -%} style="margin-bottom: 6em;height: 100%" {%- endif -%}>
+<div class="ui container" {%- if application.in_footer -%} style="margin-bottom: 6em;height: 100%" {%- endif -%}>
   {% include "tpl_flash.html" %}
   {%- if application.tables[tableid].views[viewid].type_view == "table" -%}
   {% include "tpl_table.html" %}
@@ -51,5 +51,20 @@
   {% include "tpl_table.html" %}
   {%- endif -%}
 </div>
+<!-- onglets infooter -->
+<div>{{application.in_footer}}</div>
+{%- if application.in_footer -%}
+<div class="ui bottom visible sidebar">
+  <div class="ui {{application.in_footer}} labeled icon item menu">
+  {%- for menu in application.menu -%}
+    <a class="item{% if menu.tableid == tableid and menu.viewid == viewid %} blue active{% endif %}"
+      href="/view/{{appid}}/{{menu.tableid}}/{{menu.viewid}}">
+      <i class="{{application.tables[menu.tableid].views[menu.viewid].icon_name}} blue icon"></i>
+        {{application.tables[menu.tableid].views[menu.viewid].title}}
+    </a>
+  {%- endfor -%}
+  </div>
+</div>
+{%- endif -%}>
 <input type="hidden" id="crud_view" value="{{appid}}-{{tableid}}-{{viewid}}">
 {%- endblock -%}
