--- a/templates/tpl_table_elements.html
+++ b/templates/tpl_table_elements.html
@@ -2,23 +2,23 @@
 {# Affichage d'une cellule avec la value de l'élémnt correspondant #}
 {%- macro table_elements(el) -%}
 {%- if el.type_element == "amount" -%}
-<td class="ui aligned" {% if el.style %}style="{{ el.style }}"{% else %}style="text-align: right;"{% endif %}
-{% if el.class %} class="{{ el.class }}"{% endif %}>{{el.value | format_amount}}</td>
+<td class="ui {{el.col_align}} aligned {{el.class}}" style="{{el.style}}">{{el.format}}</td>
 {%- elif el.type_element == "number" -%}
-<td class="ui aligned" {% if el.style %}style="{{ el.style }}"{% else %}style="text-align: center;"{% endif %}
-{% if el.class %} class="{{ el.class }}"{% endif %}>{{el.value}}</td>
+<td class="ui {{el.col_align}} aligned {{el.class}}" style="{{el.style}}">{{el.value}}</td>
 {%- elif el.type_element == "checkbox" -%}
-<td class="ui aligned" {% if el.style %}style="{{ el.style }}"{% else %}style="text-align: center;"{% endif %}{% if el.class %} class="{{ el.class }}"{% endif %}>
+<td class="ui {{el.col_align}} aligned {{el.class}}" style="{{el.style}}">
 <input type="checkbox" {% if el.value == "1" %}checked{% endif %} disabled></input>
 </td>
 {%- elif el.type_element == "tag" -%}
-<td class="ui aligned" {% if el.style %}style="{{ el.style }}"{% endif %}{% if el.class %} class="{{ el.class }}"{% endif %}>
+<td class="ui {{el.col_align}} aligned {{el.class}}" style="{{el.style}}">
     {%- for item in el.value | split(pat=",") -%}
-    <div class="ui tag small label" style="margin-bottom: 0.5em;margin-right: 0.3em;">{{item}}</div>
+    <div class="ui tag mini label" style="margin-bottom: 0.5em;margin-right: 0.3em;">{{item}}</div>
     {%- endfor -%}
 </td>
 {%- else -%}
-<td class="ui aligned" {% if el.style %}style="{{ el.style }}"{% endif %}{% if el.class %} class="{{ el.class }}"{% endif %}>{{el.value}}</td>
+<td class="ui {{el.col_align}} aligned {{el.class}}" style="{{el.style}}">
+{%- if el.format -%}{{el.format}}{%-else-%}{{el.value}}{%-endif-%}
+</td>
 {%- endif -%}
 {%- endmacro table_elements -%}
 
