--- a/templates/tpl_form.html
+++ b/templates/tpl_form.html
@@ -1,55 +1,106 @@
 {%- extends "tpl_base.html" -%}
 {% import "tpl_form_elements.html" as macros %}
-{%- block title -%}
-<span><b>{{ application.title }}</b></span>
-{%- endblock -%}
 
-{%- block menu -%}
-{%- for tv in application.menu -%}
-<li><a href="/view/{{appid}}/{{tv.tableid}}/{{tv.viewid}}">{{application.tables[tv.tableid].views[tv.viewid].title}}</a>
-</li>
-{%- endfor -%}
-{%- endblock -%}
+{%- block title -%}{%- endblock -%}
+
+{%- block menu -%}{% include "tpl_menu.html" %}{%- endblock -%}
 
 {%- block navigation -%}
-<span style="float: left; margin-left: 1em;">
-  <a href="/view/{{appid}}/{{tableid}}/{{viewid}}">
-    <button><- retour <b>{{view.title}}</button></b></button>
-  </a></span>
+<a href="/view/{{appid}}/{{tableid}}/{{viewid}}" class="item" style="padding: 0.3em;">
+  <i class="arrow left icon"></i>
+  <div class="header item">{{view.title}}</div>
+</a>
 {%- endblock -%}
 
 {%- block boutons -%}
-<span style="float: right;">
-  {%- if view.form_edit -%}<a href="/edit/{{appid}}/{{tableid}}/{{viewid}}/{{view.form_edit}}/{{id}}" title="Modifier">
-    <button>Modifier</button></a>
-  {%- endif -%}
-  {%- if view.deletable -%}&nbsp;<button onclick="if (window.confirm('Veuillez confirmer la suppression de cet article')) { document.forms['myform'].submit(); }">Supprimer...</button>
-  {%- endif -%}
-</span>
+{%- if view.deletable -%}
+<div class="item">
+  <button class="ui icon button crud-jquery-delete" title="Supprimer cette fiche...">
+    <i class="trash icon"></i>
+  </button>
+</div>
+{%- endif -%}
+{%- endblock -%}
+
+{%- block actions -%}
+{%- if application.tables[tableid].formss[formid].actions -%}
+<div class="ui dropdown item">
+  <i class="ellipsis vertical icon"></i>
+  <div class="menu">
+    {%- for action in application.tables[tableid].forms[formid].actions -%}
+      {%- if not action.hide -%}
+    <a class="item crud-jquery-action" data-confirm="{{action.with-confirm}}" href="/actionf/{{appid}}/{{tableid}}/{{viewid}}/{{loop.index0}}">{{ action.label }}</a></li>
+      {%- endif -%}
+    {%- endfor -%}
+  </div>
+</div>
+{%- endif -%}
 {%- endblock -%}
 
 {%- block content -%}
-<h1>{{form.title}}</h1>
-<table>
-  <tr>
-    <td>
-      <table>
-        {%- for vel in form.velements -%}
-        <tr>
-          {{ macros::form_elements(el=record[vel.elid]) }}
-        </tr>
-        {%- endfor -%}
-      </table>
-    </td>
-  </tr>
-</table>
+<div class="ui container">
+  {% include "tpl_flash.html" %}
+  <div class="ui cards">
+  {%- for vel in form.velements -%}
+    {%- if loop.first and record[vel.elid].type_element != "card" -%}
+      {# first card #}
+      {%- if view.form_edit -%}
+    <div class="link card raised crud-card-view {{vel.class}} crud-jquery-url" style="{{vel.style}}" data-url="/edit/{{appid}}/{{tableid}}/{{viewid}}/{{view.form_edit}}/{{id}}">
+      {%- else -%}
+    <div class="link card raised crud-card-view {{vel.class}}" style="{{vel.style}}">
+      {%- endif -%}{# end form edit #}
+      <div class="content" style="flex-grow: 0;">
+        {%- if view.form_edit -%}
+        <div class="right floated meta"><a class="crud-jquery-url" data-url="/edit/{{appid}}/{{tableid}}/{{viewid}}/{{view.form_edit}}/{{id}}" title="Modifier..."><i class="edit blue icon"></i></a>
+        </div>
+        {%- endif -%}{# end form edit #}
+        <div class="header">
+          <i class="large blue {{view.icon_name}} icon"></i>
+          {{form.title}} : [{{record[table.setting.key].value}}]
+        </div>
+      </div>
+      <div class="content">
+    {%- endif -%}{# end loop first #}
+    {%- if not vel.hide -%}
+      {%- if record[vel.elid].type_element == "card" -%}
+      {# start new card #}
+      {# cloture de la card en cours #}
+      </div><!-- /content -->
+    </div><!-- /card -->
+    <!-- card -->
+        {%- if vel.params.formid -%}
+    <div class="link card raised crud-card-view {{vel.class}} crud-jquery-url" style="{{vel.style}}" data-url="/edit/{{appid}}/{{tableid}}/{{viewid}}/{{vel.params.formid}}/{{id}}">
+      <div class="content" style="flex-grow: 0;">
+        <div class="right floated meta"><a class="crud-jquery-url" data-url="/edit/{{appid}}/{{tableid}}/{{viewid}}/{{vel.params.formid}}/{{id}}" title="Modifier..."><i class="edit blue icon"></i></a></div>
+        <div class="header">
+          <i class="large blue {{vel.icon_name}} icon"></i>
+          {{vel.label_long}}
+        </div>
+      </div>
+    <div class="content">
+        {%- elif vel.params.url -%}
+    <div class="link card raised crud-card-view {{vel.class}} crud-jquery-url" style="{{vel.style}}" data-url="{{vel.params.url}}">
+      <div class="content" style="flex-grow: 0;">
+        <div class="right floated meta"><a class="crud-jquery-url" data-url="{{vel.params.url}}" title="Ouvrir..."><i class="edit blue icon"></i></a></div>
+          <div class="header">
+            <i class="large blue {{vel.icon_name}} icon"></i>
+                {{vel.label_long}}
+          </div>
+        </div>
+      <div class="content">
+        {# TODO card view #}
+        {%- endif -%}{# end if type card #}
+      {%- endif -%}{# end if card #}
+      {# dessin des élements #}
+      {{ macros::form_elements(el=record[vel.elid]) }}
+    {%- endif -%}{# end if not hide #}
+  {%- endfor -%}{# end loop velements #}
+    {# end card courante #}
+    </div><!-- /content -->
+  </div><!-- /card -->
+</div>{# end container #}
 {%- endblock -%}
-{%- block actions -%}
-<!-- Actions du formulaire -->
-{%- for action in application.tables[tableid].forms[formid].actions -%}
-<li><a href="/actionf/{{appid}}/{{tableid}}/{{viewid}}/{{loop.index0}}">{{ action.label }}</a></li>
-{%- endfor -%}
-{%- endblock -%}
+
 {%- block forms -%}
 {%- if view.deletable -%}
 <form id="myform" action="/delete/{{appid}}/{{tableid}}/{{viewid}}/{{id}}" method="post">
